working hand-tracking with camera

--- a/env.yml
+++ b/env.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - python=3.12
   - psygnal=0.14.1
+  - protobuf=5.29.5
   - pip
   - pip:
       - mediapipe==0.10.21
-      - protobuf==5.29.5
